--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
           content="Начни зарабатывать на криптовалюте вместе с Web3 Academy. Топовые стратегии и инструменты">
     <meta name="zen-verification" content="UKv5ZLLbuyzJe3SBOQ01RftHh0w2Lj9zb7EqiGCqpzCi6IvGS33SVAixuv0PmpfZ"/>
@@ -14,7 +15,7 @@
           title="BioAcademy">
     <meta property="og:url" content="%PUBLIC_URL%">
     <meta property="og:site_name" content="BioAcademy">
-    <meta property="og:title" content="Gрисоединяйтесь к экспертному разбору ЕГЭ по биологии">
+    <meta property="og:title" content="Присоединяйтесь к экспертному разбору ЕГЭ по биологии">
     <meta property="og:description"
           content="Присоединяйтесь к экспертному разбору ЕГЭ по биологии">
     <meta property="og:image"
