--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
     <meta property="og:image:height" content="620">
     <title>BioAcademy</title>
   </head>
+  <div id="metrika"></div>
   <body>
     <div id="root"></div>
   </body>
